--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Who's Xinyi Xiang
-description: 人形吃饭机器
+description: 赛博废土下的人形吃饭机器
 baseurl: "" 
 #change the baseurl to "" if you are using it as your user GitHub Pages
 url: "https://vvvvvicabd.github.io"  
