--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Who's Xinyi Xiang
 description: 吃饭机器
 baseurl: "" 
 #change the baseurl to "" if you are using it as your user GitHub Pages
-url: "https://vvvvvicabd.github.io"  
+url: "https://yk-liu.github.io"  
 
 
 # GitHub User settings
