--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Who's Xinyi Xiang
-description: 吃饭机器
+description: cyber废土上的人形吃饭机器
 baseurl: "" 
 #change the baseurl to "" if you are using it as your user GitHub Pages
 url: "https://yk-liu.github.io"  
