--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Who's Xinyi Xiang
-description: cyber废土上的人形吃饭机器
+title: Who's 纪委
+description: cyber废土上的人形耐嚼机器
 baseurl: "" 
 #change the baseurl to "" if you are using it as your user GitHub Pages
 url: "https://yk-liu.github.io"  
