--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 # Site settings
-title: Who's 纪委
-description: cyber废土上的人形耐嚼机器
+title: Who's Xinyi Xiang
+description: "Experienced lead with a demonstrated history of working in the education management industry."
+"Skilled in Data Analysis, Organizational Leadership, Java, Game Development, and French."
+"Strong professional studying at University of Washington." 
 baseurl: "" 
 #change the baseurl to "" if you are using it as your user GitHub Pages
 url: "https://yk-liu.github.io"  
