--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 # Site settings
 title: Who's Xinyi Xiang
-description: "Skilled in Data Analysis, Organizational Leadership, Java, Game Development, and French."
-"Strong professional studying at University of Washington."
+description: "Skilled in Data Analysis, Organizational Leadership, Java, Game Development, and French.""Strong professional studying at University of Washington."
 baseurl: "" 
 #change the baseurl to "" if you are using it as your user GitHub Pages
 url: "https://yk-liu.github.io"  
