--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 # Site settings
-title: Who's Xinyi Xiang
-description: Skilled in Data Analysis, Organizational Leadership, Java, Game Development, and French.
+title: Xinyi Xiang
+description: Double Majoring in Math & Linguistics at University of Washington
 baseurl: "" 
-#change the baseurl to "" if you are using it as your user GitHub Pages
-url: "https://yk-liu.github.io"  
+#change the baseurl to "" if you are using it as your user GitHub Pages 
 
 
 # GitHub User settings
