--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: Xinyi Xiang
-description: Double Majoring in Math & Linguistics at University of Washington
+description: Pursuing Double Degree at University of Washington
 baseurl: "" 
 #change the baseurl to "" if you are using it as your user GitHub Pages 
-url: "https://yk-liu.github.io"
+url: ""
 
 # GitHub User settings
 username: Username
