--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Xinyi Xiang
 description: Pursuing Double Degree at University of Washington
 baseurl: "" 
 #change the baseurl to "" if you are using it as your user GitHub Pages 
-url: ""
+url: "https://yk-liu.github.io"
 
 # GitHub User settings
 username: Username
