--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,14 @@ title: Xinyi Xiang
 description: Pursuing Double Degree at University of Washington
 baseurl: "" 
 #change the baseurl to "" if you are using it as your user GitHub Pages 
-url: "https://yk-liu.github.io"
+url: "https://xinyixiang.github.io"
 
 # GitHub User settings
-username: Username
-github_username: github_username
+username: XinyiXiang
+github_username: XinyiXiang
 user_description: user_description
 user_title: user_title
-email: 
+email: xinyixiang1129@gmail.com
 
 # Blog Author settings
 author:
