possibly jekyll subpage fix

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Xinyi Xiang
 description: Pursuing Double Degree at University of Washington
-baseurl: "" 
+baseurl: "/PersonalWebsiteXinyi" 
 #change the baseurl to "" if you are using it as your user GitHub Pages 
 url: "https://xinyixiang.github.io"
 
