re navigate subdirectory urls

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Xinyi Xiang
 description: Pursuing Double Degree at University of Washington
 baseurl: "" 
 #change the baseurl to "" if you are using it as your user GitHub Pages 
-url: "https://xinyixiang.github.io/PersonalWebsiteXinyi/"
+url: "https://xinyixiang.github.io/Website/"
 
 # GitHub User settings
 username: XinyiXiang
