--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Site settings
 title: Xinyi Xiang
-description: This site is a repository of my past experiences, projects, and notes. I enjoy learning through reading, designing and creating, and I've decided to share these notes, along with some of my own writings. 
+description: This site is a repository of my past experiences, projects, and notes. 
+# NOTE: (Optional) I enjoy learning through reading, designing and creating, and I've decided to share these notes, along with some of my own writings. 
 baseurl: "" 
 #change the baseurl to "" if you are using it as your user GitHub Pages 
 url: "https://xinyixiang.github.io/Website/"
