--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Xinyi Xiang
-description: Moving future updates to xinyixiang.github.io/portfolio/
+description: Moving future updates to https://xinyixiang.github.io/portfolio/
 # NOTE: (Optional) I enjoy learning through reading, designing and creating, and I've decided to share these notes, along with some of my own writings. 
 baseurl: "" 
 #change the baseurl to "" if you are using it as your user GitHub Pages 
